--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "clean": "rm -rf data/temp_media/* logs/*"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.400.0",
+    "@aws-sdk/lib-storage": "^3.400.0",
     "@whiskeysockets/baileys": "^6.7.0",
     "axios": "^1.13.5",
     "better-sqlite3": "^11.5.0",
@@ -24,11 +26,12 @@
     "ioredis": "^5.4.1",
     "luxon": "^3.5.0",
     "openai": "^6.24.0",
+    "pg": "^8.18.0",
     "pino": "^9.4.0",
     "pino-pretty": "^11.2.0",
     "sharp": "^0.33.5",
-    "zod": "^3.23.0",
-    "stoat.js": "github:stoatchat/javascript-client-sdk"
+    "stoat.js": "github:stoatchat/javascript-client-sdk",
+    "zod": "^3.23.0"
   },
   "devDependencies": {
     "eslint": "^9.12.0",
