--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.400.0",
     "@aws-sdk/lib-storage": "^3.400.0",
+    "@grammyjs/runner": "^2.0.0",
     "@whiskeysockets/baileys": "^6.7.0",
     "axios": "^1.13.5",
     "better-sqlite3": "^11.5.0",
@@ -29,8 +30,9 @@
     "pg": "^8.18.0",
     "pino": "^9.4.0",
     "pino-pretty": "^11.2.0",
+    "qrcode-terminal": "^0.12.0",
     "sharp": "^0.33.5",
-    "stoat.js": "github:stoatchat/javascript-client-sdk",
+    "stoat.js": "file:vendor/stoat.js",
     "zod": "^3.23.0"
   },
   "devDependencies": {
