--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": ">=24.0.0"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "node --env-file=.env --disable-warning=DEP0040 index.js",
     "dev": "node --watch index.js",
     "test": "node --test"
   },
